tests/shaders/fail/parser/malformed_resource/main.ksl
shader BrokenResource {
    group Material {
        texture: Texture2d
    }
}
